summernote 최신화, yml 설정 리눅스 대비 주석, README 수정

--- a/src/main/resources/templates/summernote/summernote.html
+++ b/src/main/resources/templates/summernote/summernote.html
@@ -479,7 +479,7 @@
             }
         });
 
-        // 브라우저가 종료될 시 임시파일 삭제 (취소버튼, F5, alt+F4, 브라우저 종료 등등
+        // 브라우저가 종료될 시 임시파일 삭제 (취소버튼, F5, alt+F4, 브라우저 종료 등등)
         window.addEventListener('beforeunload', function (e) {
             removeTempFileWithCancelButton(imageUUIDs, extensions);
         })
