--- a/src/main/resources/templates/summernote/summernote.html
+++ b/src/main/resources/templates/summernote/summernote.html
@@ -181,8 +181,8 @@
         // 본문 내용을 비교해 삭제 된 이미지의 정보들 추출
         function trackDeleteImagesInfo(currentUrls, previousUrls,
                                        currentFileNames, previousFileNames,
-                                       currentFileUuids, previousFileUuids,
-                                       currentFileExtensions, previousFileExtensions) {
+                      /*                 currentFileUuids, previousFileUuids,
+                                       currentFileExtensions, previousFileExtensions*/) {
 
             // 각 배열들에 있는 내용을 현재 내용과 비교해 없는 것들을 deleted 에 저장
             const deletedImagesUrls = previousUrls.filter(urls => !currentUrls.includes(urls));
@@ -480,7 +480,7 @@
         });
 
         // 브라우저가 종료될 시 임시파일 삭제 (취소버튼, F5, alt+F4, 브라우저 종료 등등)
-        window.addEventListener('beforeunload', function (e) {
+        window.addEventListener('beforeunload', function () {
             removeTempFileWithCancelButton(imageUUIDs, extensions);
         })
     });
