allSearch 화면 구성 추가, 홈 로그인 후 화면 구성, nav 깨짐 수정, 이외 자잘한 css 수정

--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -80,6 +80,11 @@ td > a {
     width: 30px;
 }
 
+.form-check-input {
+    margin-left: 0.75rem;
+    margin-right: 0.2rem;
+}
+
 .boardImg {
     display: block;
     width: 120px;
@@ -163,12 +168,10 @@ td > a {
 }
 
 .deleteBtn {
-    color: #000;
     background-color: #E8FFFF;
-    border: 1px solid #E8FFFF;
-    --bs-btn-hover-color: black;
-    --bs-btn-hover-border-color: red;
-    --bs-btn-hover-bg: red;
+    border-color: white;
+    color: #000;
+    --bs-btn-hover-color: #fff;
 }
 
 .page-item .page-link {
