--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -231,7 +231,7 @@
                 <!--                    </div>-->
             </div>
             <form id="formReply" th:action="@{/replies/}" method="post">
-                <table class="m-1 mt-4 w-100 replyRegister">
+                <table class="mt-4 w-100 replyRegister">
                     <tbody>
                     <tr class="replyTop">
                         <td class="pt-3 px-3 replyNotice">댓글 작성</td>
