--- a/src/main/resources/templates/board/showOff.html
+++ b/src/main/resources/templates/board/showOff.html
@@ -75,7 +75,7 @@
                                                  alt="Image">
                                         </div>
                                         <div class="me-4" th:if="${dto.imgBoards.isEmpty()}">
-                                            <img src="/img/board/no_search.png" class="boardImg"
+                                            <img src="/img/board/no_photo.png" class="boardImg"
                                                  alt="Image">
                                         </div>
                                         <div>
