--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -20,7 +20,7 @@
         <div>
             <div class="d-flex justify-content-center align-items-center"
                  style="height: 100px; width: 700px;">
-                <h1 style="color: #67cafe"><b>JOIN US</b></h1>
+                <h1 style="color: #67cafe"><b>회원가입</b></h1>
             </div>
             <div class="d-flex justify-content-center align-items-center"
                  style="height: 700px; width: 700px;">
@@ -28,10 +28,10 @@
                     <!-- 수의사 인증 섹션 -->
                     <div class="d-flex justify-content-end">
                         <div class="dropdown">
-                            <button class="btn certification-button dropdown-toggle" type="button"
+                            <button class="certification-button dropdown-toggle" type="button"
                                     id="vetVerificationDropdown"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                수의사인증
+                                수의사 인증
                             </button>
                             <ul class="dropdown-menu p-4" aria-labelledby="vetVerificationDropdown">
                                 <li class="mb-3">
@@ -43,7 +43,7 @@
                                     <input type="text" id="vetLicense" name="vetLicense" class="form-control">
                                 </li>
                                 <li class="d-flex justify-content-center">
-                                    <button type="button" class="btn certification-button"
+                                    <button type="button" class="certification-button"
                                             onclick="verifyVet()">
                                         인증
                                     </button>
