--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -42,7 +42,7 @@
         <div style="height: 800px; width: 700px;">
             <div class="d-flex justify-content-center align-items-center"
                  style="height: 100px; width: 700px;">
-                <h1 style="color: #67cafe"><b>LOGIN</b></h1>
+                <h1 style="color: #67cafe"><b>로그인</b></h1>
             </div>
             <div class="d-flex justify-content-center align-items-center" style="height: 300px;">
                 <form class="d-flex flex-column justify-content-center">
