--- a/src/main/resources/static/css/board/read.css
+++ b/src/main/resources/static/css/board/read.css
@@ -118,7 +118,7 @@ body {
 .listBtn {
     color: #fff;
     background-color: #67cafe;
-    border: 1px solid #67cafe;
+    border: 3px solid #67cafe;
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
@@ -126,8 +126,8 @@ body {
 
 .modify_qBtn, .modifyBtn {
     color: #fff;
-    background-color: #67cafe;
-    border: 1px solid #67cafe;
+    background-color: #ffc107;
+    border: 3px solid #ffc107;
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #ffc107;
     --bs-btn-hover-bg: #ffc107;
@@ -135,9 +135,9 @@ body {
 
 .deletePostBtn {
     color: #fff;
-    background-color: #67cafe;
-    border: 1px solid #67cafe;
-    --bs-btn-hover-color: black;
+    background-color: red;
+    border: 3px solid red;
+    --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: red;
     --bs-btn-hover-bg: red;
 }
@@ -182,13 +182,7 @@ tr.replyBody > td.align-middle {
 }
 
 .replySubmitBtn {
-    width: 120px;
-    color: #fff;
-    background-color: #67cafe;
-    border: 1px solid #67cafe;
-    --bs-btn-hover-color: #000;
-    --bs-btn-hover-border-color: #67cafe;
-    --bs-btn-hover-bg: #67cafe;
+    color: white;
 }
 
 #readList {
