--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -7,7 +7,6 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
 </head>
 <header th:fragment="header">
     <!--부트스트랩 아이콘 사용-->
@@ -19,30 +18,27 @@
         <div class="log" style="width: 192px"><a href="/sample/home"><img class="bi me-2" th:src="@{/img/logo/logo.png}"
                                                                           width="120" height="120"
                                                                           alt="로고"></a></div>
-        <div class="title"><a href="/sample/home"><img class="bi me-2" th:src="@{/img/logo/title.png}" width="400" height="150"
-                                                alt="타이틀"></a></div>
+        <div class="title"><a href="/sample/home"><img class="bi me-2" th:src="@{/img/logo/title.png}" width="400"
+                                                       height="150"
+                                                       alt="타이틀"></a>
+        </div>
         <div class="auth d-flex flex-column justify-content-between" id="auth">
-            <div class="d-flex justify-content-start">
             <!-- Thymeleaf 조건문을 사용하여 로그인 상태에 따라 다른 내용 표시 -->
+            <div class="d-flex justify-content-start">
             <span th:if="${username == null}" class="logged-out">
                 <a href="/user/login">로그인</a>
                 <a href="/user/join">회원가입</a>
             </span>
-            <span th:if="${username != null}" class="logged-in">
-                <span th:if="${role == 'ROLE_ADMIN'}">
-                    <a href="/admin/user-list">관리자페이지</a>
-                </span>
+                <span th:if="${username != null}" class="logged-in">
                 <a href="/my/user-detail">마이페이지</a>
                 <a href="javascript:void(0);" onclick="logout()">로그아웃</a>
             </span>
-            <a href="#">공지사항</a>
-        </div>
-
-        <div class="d-flex justify-content-end"><img th:src="@{/img/logo/footprint.png}" width="50" alt="헤더이미지"
+                <a href="#">공지사항</a>
+            </div>
+            <div class="d-flex justify-content-end"><img th:src="@{/img/logo/footprint.png}" width="50" alt="헤더이미지"
                                                          style="transform: rotate(20deg);" class="mx-3"></div>
         </div>
     </div>
-
     <div class="search-container">
         <form class="input-group" style="width: 33%;" th:action="@{/sample/allSearch}" method="get">
             <select class="form-select" name="type"
@@ -70,12 +66,11 @@
             </button>
         </form>
     </div>
-
     <!-- Thymeleaf 조건식으로 현재 보고 있는 게시판을 nav 태그에 표시 -->
     <!-- 공통 nav -->
     <div style="background-color: #67cafe;">
         <nav th:unless="${boardCode == 'general' or boardCode == 'showoff' or boardCode == 'tip' or boardCode == 'qna'}"
-             style="padding: 20px; margin-bottom: 20px;">
+             style="height: 66px; margin-bottom: 20px;" class="d-flex justify-content-center">
             <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/sample/home}"
                                                                          style="color: white;">홈</a></span>
             <span class="mx-5" style="margin-top: 20px; height: 30px"><a
@@ -98,7 +93,7 @@
                     style="color: white; font-weight: bold; margin-top: 20px; margin-bottom: 20px;">자랑 게시판</a></span>
             <span class="mx-5" style="margin-top: 20px; height: 30px"><a
                     th:href="@{/board/{boardCode}(boardCode=general)}"
-                    style="color: white; font-weight: bold; margin-top: 20px; margin-bottom: 20px;">자유 게시판</a></span>
+                    style="color: white;">자유 게시판</a></span>
             <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/board/{boardCode}(boardCode=tip)}"
                                                                          style="color: white;">정보 게시판</a></span>
             <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/board/{boardCode}(boardCode=qna)}"
