--- a/src/main/resources/templates/sample/home.html
+++ b/src/main/resources/templates/sample/home.html
@@ -38,7 +38,7 @@
                                          alt="Image">
                                     </span>
                                     <span th:if="${dto.imgBoards.isEmpty()}">
-                                    <img src="/img/board/no_search.png" class="boardImg"
+                                    <img src="/img/board/no_photo.png" class="boardImg"
                                          alt="Image">
                                     </span>
                                     <div class="mt-3">
@@ -189,7 +189,7 @@
 
             <!--오른쪽-->
             <div>
-
+                <!--로그인 전-->
                 <div class="d-flex mb-4 ms-4 login" th:if="${username == null}">
                     <div>
                         <form>
@@ -247,48 +247,75 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="p-4 mb-4 ms-4 login" th:if="${username != null}">
-                    <div class="d-flex justify-content-between">
-                        <div class="d-flex flex-column align-self-center">
-                            <p class="userId" th:text="${username}"></p>
-                            <p class="nickname" th:text="${nickname + '님, 반갑습니다!'}"></p>
+                <!--로그인 후-->
+                <div class="p-4 mb-4 ms-4 login" th:if="${username != null}" style="background-color: #E8FFFF">
+                    <div class="d-flex flex-column justify-content-between px-3" style="background-color: white; height: 220px; border: 1px solid #d5d5d5; border-radius: 0.35rem">
+                        <!--닉네임-->
+                        <div class="align-self-center mt-5">
+                            <div class="d-flex flex-row">
+                                <span class="nickname fs-4" th:text="${nickname}"></span>
+                                <span class="d-flex flex-column justify-content-center mt-1">
+                                    <span class="ms-2"> 님, 반갑습니다!</span>
+                                </span>
+                            </div>
                         </div>
-                        <!-- 레벨 이미지 표시 -->
-                        <div>
-                            <img th:if="${userLevelInfo.level == 1}" th:src="@{/img/level/red.png}"
-                                 alt="User Level Image" style="width: 100px; height: 100px;"/>
-                            <img th:if="${userLevelInfo.level == 2}" th:src="@{/img/level/orange.png}"
-                                 alt="User Level Image" style="width: 100px; height: 100px;"/>
-                            <img th:if="${userLevelInfo.level == 3}" th:src="@{/img/level/yellow.png}"
-                                 alt="User Level Image" style="width: 100px; height: 100px;"/>
-                            <img th:if="${userLevelInfo.level == 4}" th:src="@{/img/level/mint.png}"
-                                 alt="User Level Image" style="width: 100px; height: 100px;"/>
-                            <img th:if="${userLevelInfo.level == 5}" th:src="@{/img/level/purple.png}"
-                                 alt="User Level Image" style="width: 100px; height: 100px;"/>
-                        </div>
-                    </div>
-
-                    <div class="progress-container" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                         title="자주 방문하거나 글, 댓글을 작성하면 경험치가 쌓입니다!">
-                        <div class="progress">
-                            <!-- 진행 바 -->
-                            <div class="custom-progress-bar" role="progressbar"
-                                 th:style="'width: ' + ${userLevelInfo.percentage} + '%;'"
-                                 th:attr="aria-valuenow=${userLevelInfo.percentage},
-                                          aria-valuemin=0,
-                                          aria-valuemax=100"
-                                 aria-valuenow="${userLevelInfo.percentage}">
+                        <!--레벨/경험치-->
+                        <div class="d-flex flex-column mb-3">
+                            <div class="d-flex flex-row justify-content-center mb-2">
+                                <!-- 레벨 이미지 표시 -->
+                                <span class="ms-2 mb-1">
+                                    <img th:if="${userLevelInfo.level == 1}" th:src="@{/img/level/red.png}"
+                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                    <img th:if="${userLevelInfo.level == 2}" th:src="@{/img/level/orange.png}"
+                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                    <img th:if="${userLevelInfo.level == 3}" th:src="@{/img/level/yellow.png}"
+                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                    <img th:if="${userLevelInfo.level == 4}" th:src="@{/img/level/mint.png}"
+                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                    <img th:if="${userLevelInfo.level == 5}" th:src="@{/img/level/purple.png}"
+                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                </span>
+                                <!--exp 바-->
+                                <div class="d-flex flex-column justify-content-center ms-4 me-3 mt-3">
+                                    <div class="d-flex flex-column justify-content-center progress-container" data-bs-toggle="tooltip" data-bs-placement="top"
+                                         title="자주 방문하거나 글, 댓글을 작성하면 경험치가 쌓입니다!">
+                                        <div class="progress" style="width: 240px">
+                                            <!-- 진행 바 -->
+                                            <div class="custom-progress-bar" role="progressbar"
+                                                 th:style="'width: ' + ${userLevelInfo.percentage} + '%;'"
+                                                 th:attr="aria-valuenow=${userLevelInfo.percentage},
+                                                  aria-valuemin=0,
+                                                  aria-valuemax=100"
+                                                 aria-valuenow="${userLevelInfo.percentage}">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-row justify-content-between me-5">
+                                <span class="ms-1" style="font-size: 18px">
+                                    레벨
+                                </span>
+                                <span class="me-5" style="font-size: 18px">
+                                    경험치
+                                </span>
                             </div>
                         </div>
                     </div>
-
-                    <div class="d-flex justify-content-evenly">
-                        <a th:href="@{'/my/userActivity/' + ${username} + '/posts'}">활동</a>
-                        <a th:href="@{'/my/user-modify?userId=' + ${username}}">정보수정</a>
-                    </div>
-                    <div>
-
+                    <!--활동/정보 수정-->
+                    <div class="d-flex flex-row justify-content-between" style="margin-top: 20px">
+                        <!--활동-->
+                        <div style="background-color: white; width: 165px; height: 60px; margin-right: 20px; border: 1px solid #d5d5d5; border-radius: 0.35rem">
+                            <div class="d-flex justify-content-center" style="margin-top: 16px;">
+                                <a th:href="@{'/my/userActivity/' + ${username} + '/posts'}" style="color: #22b3fd;">내 활동</a>
+                            </div>
+                        </div>
+                        <!--정보 수정-->
+                        <div style="background-color: white; width: 165px; height: 60px; border: 1px solid #d5d5d5; border-radius: 0.35rem">
+                            <div class="d-flex justify-content-center" style="margin-top: 16px">
+                                <a th:href="@{'/my/user-modify?userId=' + ${username}}" style="color: #22b3fd;">내 정보 수정</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
