--- a/src/main/resources/templates/admin/user-report.html
+++ b/src/main/resources/templates/admin/user-report.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
@@ -13,29 +14,36 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            overflow-y: hidden;
+            display: flex;
+            align-items: flex-start;
+        }
+
         a:hover {
             font-weight: bold;
         }
 
         header {
             width: 100%;
-            height: 80px; /* 팝업창 높이에 맞게 조정 */
+            height: 100px; /* 팝업창 높이에 맞게 조정 */
         }
 
         .popup {
+            padding: 20px;
             width: 900px;
             height: 400px;
-            margin: 0 auto;
-            padding: 10px;
-            box-sizing: border-box; /* padding과 border를 포함하여 전체 크기를 설정 */
-            overflow-y: auto; /* 내용이 넘칠 경우 스크롤 가능하도록 설정 */
+            margin-top: 0px;
+            box-sizing: border-box; /* 패딩 포함 너비 계산 */
         }
 
         .header-top {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px; /* 헤더와 컨텐츠 사이의 간격 조정 */
         }
 
         .header-top .log img {
@@ -57,13 +65,17 @@
         }
 
         .content {
-            height: calc(100% - 80px - 10px); /* 팝업창 높이에서 헤더 높이와 패딩을 뺀 높이 */
+            height: calc(100% - 140px); /* 팝업창 높이에서 헤더 높이와 패딩을 뺀 높이 */
             overflow-y: auto; /* 내용이 넘칠 경우 스크롤 가능하도록 설정 */
+            padding-top: 10px; /* 헤더와 겹치지 않도록 패딩 추가 */
         }
 
         .d-flex {
             margin: 0; /* 좌우 간격 제거 */
         }
+
+
+
     </style>
 </head>
 <body>
@@ -71,25 +83,28 @@
     <header>
         <div class="header-top">
             <div class="log">
-                <img class="bi me-2" th:src="@{/img/logo/logo.png}" alt="임시로고">
+                <img class="bi me-2" th:src="@{/img/logo/logo.png}" alt="로고">
             </div>
             <div>
                 <span class="title" th:text="${reportNickname}"></span>
-                <span>회원 신고 내역</span>
+                <h3>받은 신고</h3>
             </div>
-            <button class="btn btn-danger square-button" onclick="closeWindow()">X</button>
+            <button class=" btn btn-danger square-button" onclick="closeWindow()">X</button>
         </div>
     </header>
 
     <div class="content">
-        <div class="d-flex flex-row justify-content-between mb-3">
+
+        <div class="d-flex flex-row justify-content-start mb-1">
+
+            <!--게시글 신고부분-->
             <div class="col-custom border p-2">
                 <h5>게시물</h5>
                 <div th:each="post : ${reportedPosts}" th:if="${post.postNo != null}"
                      class="d-flex justify-content-between align-items-center mb-2">
                     <div>
                         <span th:switch="${post.boardCode}"
-                              style="background-color: #0056b3; color: white; padding: 5px; border-radius: 3px;">
+                              class="badge" style="background-color: #0056b3; color: white; padding: 5px; border-radius: 3px;">
                             <span th:case="'general'">자유</span>
                             <span th:case="'showoff'">자랑</span>
                             <span th:case="'tip'">정보</span>
@@ -100,29 +115,32 @@
                     </div>
                     <div class="text-right">
                         <span th:text="${#dates.format(post.regDate, 'yyyy-MM-dd')}"></span>
-                        <button class="btn btn-danger ml-2 btn-sm" th:onclick="|deleteReportLog(${post.reportNo})|">삭제
+                        <button class="btn btn-danger ml-2 btn-sm" th:onclick="|deleteReportLog(${post.reportNo})|">신고삭제
                         </button>
                     </div>
                 </div>
             </div>
 
+
+            <!--댓글 신고부분-->
             <div class="col-custom border p-2">
                 <h5>댓글</h5>
                 <div th:each="reply : ${reportedReplys}" th:if="${reply.replyNo != null}"
                      class="d-flex justify-content-between align-items-center mb-2">
                     <div>
-                        <span style="width: 35px;" class="bg-dark text-white"> 댓글</span>
+                        <span style="width: 35px;" class="badge bg-dark text-white"> 댓글</span>
                         <a class="d-inline-block" style="max-width: 180px; cursor: pointer;"
                            th:text="${reply.replyContent}"
                            th:onclick="|openReportDetailPopup('${reply.reportNo}')|"></a>
                     </div>
                     <div class="text-right">
                         <span th:text="${#dates.format(reply.regDate, 'yyyy-MM-dd')}"></span>
-                        <button class="btn btn-danger m-0 btn-sm" th:onclick="|deleteReportLog(${reply.reportNo})|">삭제
+                        <button class="btn btn-danger m-0 btn-sm" th:onclick="|deleteReportLog(${reply.reportNo})|">신고삭제
                         </button>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
