--- a/src/main/resources/templates/report/reply-report.html
+++ b/src/main/resources/templates/report/reply-report.html
@@ -3,25 +3,40 @@
 
 <head>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/home.css}">
     <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
     <title>Report Detail</title>
     <style>
-        .container {
+
+        body {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            overflow-y: hidden;
+            display: flex;
+            align-items: flex-start;
+
+        }
+
+        .report-detail {
             border: 1px solid #000;
             padding: 20px;
+            width: 500px;
+            margin-top: 0px;
+            box-sizing: border-box; /* 패딩 포함 너비 계산 */
         }
 
         .header-top {
             display: flex;
             justify-content: space-between;
             align-items: center;
+
         }
 
         .details, .content {
@@ -44,7 +59,7 @@
             text-decoration: underline;
         }
 
-        .delete-button-container {
+        .report-button-container {
             display: flex;
             justify-content: flex-end;
             margin-bottom: 20px;
@@ -55,38 +70,43 @@
 </head>
 <body>
 
-<div class="container">
+<div class="report-detail">
     <div class="header-top">
-        <h2>신고</h2>
+        <h2>댓글 신고</h2>
         <button class="btn btn-danger square-button" onclick="closeWindow()">X</button>
     </div>
 
 
-    <!--    <h1 th:text="${User.userName}"></h1>-->
-    <!--    <h1 th:text="${Reply.replyContent}"></h1>-->
-    <!--    <h1 th:text="${postReport.postTitle}"></h1>-->
-
-
-    <form onsubmit="createReportLog(); return false;">
+    <form onsubmit="createReplyReportLog(); return false;">
 
         <!--신고 관련정보-->
         <div class="details">
-            <div>신고자:
+            <div>
+                <span class="badge bg-secondary text-white m-1">신고자</span>
                 <span id="nickname" th:text="${nickname}"></span>
                 /
                 <span id="userName" th:text="${username}"></span>
             </div>
 
-            <div>신고시간:
+            <div>
+                <span class="badge bg-secondary text-white m-1">신고시간</span>
                 <th:block th:text="${#dates.format(#dates.createNow(), 'yyyy-MM-dd HH:mm:ss')}">[신고시간]</th:block>
             </div>
-            <div>댓글내용:
+            <div>
+                <span class="badge bg-secondary text-white m-1">신고 제목</span>
                 <th:block th:text="${replyReport.replyContent}">[신고시간]</th:block>
             </div>
         </div>
 
+        <!--신고버튼-->
+        <div class="report-button-container">
+            <button id="submitBtn" class="btn ml-2 btn-sm"
+                    style="background-color: #67cafe; color:white">전송
+            </button>
+        </div>
 
-        <!--신고 작성란-->
+
+        <!--신고 제목, 내용-->
         <div class="report-title">
             <label for="reportTitle" class="form-label">신고 제목</label>
             <input name="reportTitle" type="text" id="reportTitle" class="form-control">
@@ -97,16 +117,6 @@
             <textarea name="reportContent" id="reportContent" class="form-control" rows="4"></textarea>
         </div>
 
-        <!--신고버튼-->
-        <div class="report-button-container">
-            <button id="submitBtn" class="btn btn-primary ml-2 btn-sm">전송
-            </button>
-        </div>
-
-
-        <!--        <input type="hidden" name="postNo" id="postNo" th:value="${PostReport.postNo}"/> &lt;!&ndash; 게시물 번호 hidden 필드 &ndash;&gt;-->
-        <!--        <input type="hidden" name="replyNo" id="replyNo" th:value="${replyNo}"/> &lt;!&ndash; 댓글 번호 hidden 필드 &ndash;&gt;-->
-
 
     </form>
 </div>
@@ -114,31 +124,38 @@
 <script>
 
 
-    function createReportLog() {
-        // e.preventDefault();
+    function createReplyReportLog() {
 
         const userId = document.getElementById("userName").textContent.trim();
-        // const replyNo = document.getElementById("replyNo").value;
         const reportTitle = document.getElementById("reportTitle").value;
         const reportContent = document.getElementById("reportContent").value;
 
 
-        console.log("Report UserId:", userId);
-        console.log([[${replyReport.replyNo}]]);
-        // console.log(replyNo);
-        console.log("Report Title:", reportTitle);
-        console.log("Report Content:", reportContent);
+        // 입력값 검증
+        if (!reportTitle) {
+            alert("신고 제목을 입력하세요.");
+            return;
+        }
+        if (!reportContent) {
+            alert("신고 내용을 입력하세요.");
+            return;
+        }
+
+        // 사용자가 취소를 클릭한 경우 종료
+        const isConfirmed = confirm("정말로 신고하시겠습니까?");
+        if (!isConfirmed) {
+            return;
+        }
 
 
+
+        // reportLogDTO생성
         const reportLogDTO = {
             userId: userId,
-            replyNo: Number([[${replyReport.replyNo}]]),
-            // replyNo: replyNo,
+            replyNo: Number(`[[${replyReport.replyNo}]]`),
             reportTitle: reportTitle,
             reportContent: reportContent
         };
-
-        console.log(reportLogDTO);
 
         axios.post('/report/reportLog', reportLogDTO)
             .then(function (response) {
