--- a/src/main/resources/templates/board/modify_q.html
+++ b/src/main/resources/templates/board/modify_q.html
@@ -92,7 +92,7 @@
             <!--글내용 입력-->
             <div>
                 <!-- 서머노트 -->
-                <div th:include="/summernote/summernote :: summernote"></div>
+                <div th:include="summernote/summernote :: summernote"></div>
             </div> <!--글내용 입력-->
 
             <!--버튼-->
