CustomSecurityConfig : static 안에 폰트 설정 추가 CustomLogoutFilter : 자동로그인 체크 해제 후(refresh토큰이 없을경우) 로그아웃 시 콘솔에 오류뜨길래 수정함 CustomSuccessHandler : 소셜로그인 시 JWT토큰에 role값 넣는방법 변경 UserService : 회원탈퇴 시 글,댓글,좋아요,스크랩 삭제기능 추가 header.html : admin일 경우 관리자페이지 이동 추가 join.html : 닉네임 8글자만 들어가게 수정 user-modify.html : 회원수정도 수의사인증 가능하게 추가 home.html : 로그인 후 로그인버튼 찾지못하는 에러가 console에 나타나길래 수정함(js) UsersVet : 엔티티에 수의사 인증했는지 여부를 나타내는 컬럼 추가 (verificationStatus) User : incrementExp 메서드 exp가 null일 경우 초기값 0. 로그인 시 exp값 2증가로 수정 JoinVerificationController : 수의사 2번인증 못하게 막음(verifyVet메서드) 7/25_seulgi

--- a/src/main/resources/static/css/my/userModify.css
+++ b/src/main/resources/static/css/my/userModify.css
@@ -16,6 +16,21 @@
     height: 38px;
 }
 
+.certification-button {
+    background-color: #fff;
+    border: 1px solid #67cafe;
+    color: #67cafe;
+    border-radius: 0.375rem;
+    width: 125px;
+    height: 38px;
+}
+
+.certification-button:focus {
+    background-color: #fff;
+    color: #67cafe;
+    border: 1px solid #67cafe;
+}
+
 .modi-button:hover {
     background-color: white;
     color: #67cafe;
