--- a/src/main/resources/templates/user/find-id.html
+++ b/src/main/resources/templates/user/find-id.html
@@ -116,7 +116,7 @@
                 const findPwButton = document.getElementById('findIdButton');
                 findPwButton.innerHTML = '<span>비밀번호 찾기</span>';
                 findPwButton.onclick = function () {
-                    window.location.href = '/user/findPw';
+                    window.location.href = '/user/find-pw';
                 };
             })
             .catch(function (error) {
