--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -29,7 +29,10 @@
                 <a href="/user/login">로그인</a>
                 <a href="/user/join">회원가입</a>
             </span>
-                <span th:if="${username != null}" class="logged-in">
+            <span th:if="${username != null}" class="logged-in">
+                <span th:if="${role == 'ROLE_ADMIN'}">
+                    <a href="/admin/user-list">관리자페이지</a>
+                </span>
                 <a href="/my/user-detail">마이페이지</a>
                 <a href="javascript:void(0);" onclick="logout()">로그아웃</a>
             </span>
