--- a/src/main/resources/templates/sample/home.html
+++ b/src/main/resources/templates/sample/home.html
@@ -230,9 +230,9 @@
                              style="height: 30px;">
                             <a href="/user/join">회원가입</a>
                             <div class="d-flex justify-content-between">
-                                <a href="/user/findId">아이디찾기</a>
+                                <a href="/user/find-id">아이디찾기</a>
                                 <span class="mx-1">|</span>
-                                <a href="/user/findPw">비밀번호찾기</a>
+                                <a href="/user/find-pw">비밀번호찾기</a>
                             </div>
                         </div>
                         <div class="d-flex justify-content-evenly align-items-center mt-3">
@@ -476,50 +476,78 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
+        // 툴팁 초기화
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
         tooltipTriggerList.map(function (tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl);
         });
+
+        // 로그인 버튼 이벤트 리스너 추가
+        var loginButton = document.querySelector(".login-button");
+        if (loginButton) {
+            loginButton.addEventListener("click", (event) => {
+                event.preventDefault();
+
+                // 사용자가 입력한 아이디와 비밀번호 가져오기
+                const username = document.querySelector('input[name="username"]').value;
+                const password = document.querySelector('input[name="password"]').value;
+                const autoLogin = document.querySelector('input[name="autoLogin"]').checked ? 'true' : 'false';
+                const rememberMe = document.querySelector('input[name="rememberMe"]').checked ? 'true' : 'false';
+
+                const data = { username: username, password: password, autoLogin: autoLogin, rememberMe: rememberMe };
+
+                axios.post("/user/loginProc", null, { params: data })
+                    .then(res => {
+                        // 로그인 성공 시
+                        window.location.href = "/sample/home";
+                    })
+                    .catch(error => {
+                        if (error.response) {
+                            if (error.response.status === 403) {
+                                if (error.response.data === "LOGIN_LOCKED") {
+                                    alert("로그인 5회 실패로 계정이 비활성화 되었습니다.\n비밀번호찾기에서 임시비밀번호를 발급하세요.");
+                                } else if (error.response.data === "LOGIN_BLOCK") {
+                                    alert("관리자에 의해 계정이 차단되었습니다.");
+                                }
+                                window.location.href = "/user/login"; // 로그인 페이지로 이동
+                            } else if (error.response.status === 401) {
+                                alert("아이디 또는 비밀번호를 확인하세요.");
+                                window.location.href = "/user/login"; // 로그인 페이지로 이동
+                            } else {
+                                alert("알 수 없는 오류가 발생했습니다. 다시 시도해 주세요.");
+                            }
+                        } else {
+                            alert("서버와의 연결에 문제가 발생했습니다.");
+                        }
+                    });
+            }, false);
+        }
+
+        // 페이지 로드 시 쿠키에서 아이디 값을 가져와 입력
+        window.onload = function () {
+            var usernameInput = document.getElementById("username");
+            if (usernameInput) {
+                usernameInput.value = getCookieValue("userId");
+            }
+        };
     });
 
-    document.querySelector(".login-button").addEventListener("click", (event) => {
-        event.preventDefault();
-
-        // 사용자가 입력한 아이디와 비밀번호 가져오기
-        const username = document.querySelector('input[name="username"]').value;
-        const password = document.querySelector('input[name="password"]').value;
-        const autoLogin = document.querySelector('input[name="autoLogin"]').checked ? 'true' : 'false';
-        const rememberMe = document.querySelector('input[name="rememberMe"]').checked ? 'true' : 'false';
-
-
-        const data = {username: username, password: password, autoLogin: autoLogin, rememberMe: rememberMe};
-
-        axios.post("/user/loginProc", null, {params: data})
-            .then(res => {
-                // 로그인 성공 시
-                window.location.href = "/sample/home";
-            })
-            .catch(error => {
-                if (error.response) {
-                    if (error.response.status === 403) {
-                        if (error.response.data === "LOGIN_LOCKED") {
-                            alert("로그인 5회 실패로 계정이 비활성화 되었습니다.\n비밀번호찾기에서 임시비밀번호를 발급하세요.");
-                        } else if (error.response.data === "LOGIN_BLOCK") {
-                            alert("관리자에 의해 계정이 차단되었습니다.");
-                        }
-                        window.location.href = "/user/login"; // 로그인 페이지로 이동
-                    } else if (error.response.status === 401) {
-                        alert("아이디 또는 비밀번호를 확인하세요.");
-                        window.location.href = "/user/login"; // 로그인 페이지로 이동
-                    } else {
-                        alert("알 수 없는 오류가 발생했습니다. 다시 시도해 주세요.");
-                    }
-                } else {
-                    alert("서버와의 연결에 문제가 발생했습니다.");
-                }
-            });
-    }, false);
+    // 쿠키에서 특정 이름의 값을 가져오는 함수
+    function getCookieValue(cookieName) {
+        var name = cookieName + "=";
+        var decodedCookie = decodeURIComponent(document.cookie);
+        var cookieArray = decodedCookie.split(';');
+        for (var i = 0; i < cookieArray.length; i++) {
+            var cookie = cookieArray[i].trim();
+            if (cookie.indexOf(name) === 0) {
+                return cookie.substring(name.length, cookie.length);
+            }
+        }
+        return "";
+    }
 </script>
+
+
 </body>
 <div th:include="include/footer :: footer"></div>
 </html>
