--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -121,10 +121,10 @@
                         } else if (error.response.data === "LOGIN_BLOCK") {
                             alert("관리자에 의해 계정이 차단되었습니다.");
                         }
-                        window.location.href = "/user/login"; // 로그인 페이지로 이동
+                        window.location.href = "/user/login";
                     } else if (error.response.status === 401) {
                         alert("아이디 또는 비밀번호를 확인하세요.");
-                        window.location.href = "/user/login"; // 로그인 페이지로 이동
+                        window.location.href = "/user/login";
                     } else {
                         alert("알 수 없는 오류가 발생했습니다. 다시 시도해 주세요.");
                     }
