UserService : 회원수정시 비밀번호 바꾸지 않아도 넘어가게함 7/25_seulgi

--- a/src/main/resources/templates/my/user-modify.html
+++ b/src/main/resources/templates/my/user-modify.html
@@ -72,7 +72,7 @@
                         <label for="password">신규비밀번호</label>
                         <div>
                             <input type="password" name="userPw" id="password" class="form-control form-width d-inline"
-                                   onkeyup="checkPasswordLength()" required>
+                                   onkeyup="checkPasswordLength()">
                         </div>
                         <div id="passwordFeedback" class="feedback"></div>
                     </div>
@@ -80,7 +80,7 @@
                         <label for="confirmPassword">비밀번호확인</label>
                         <div>
                             <input type="password" id="confirmPassword" class="form-control form-width d-inline"
-                                   onkeyup="checkPasswordMatch()" required>
+                                   onkeyup="checkPasswordMatch()">
                             <div id="confirmPasswordFeedback" class="feedback"></div>
                         </div>
                     </div>
