공지사항 페이지, 홈 자랑게시판 구조 수정, style 속성 css 파일로 이동 ing 등

--- a/src/main/resources/templates/board/register_q.html
+++ b/src/main/resources/templates/board/register_q.html
@@ -49,7 +49,7 @@
             <!--글 작성 안내 -->
             <div>
                 <small class="text-muted">
-                    * 전문적인 답변을 원하시면 '답변자선택'에서 '수의사<img src="/img/tag/vetScope.png" alt="수의사태그" style="width: 20px">'를
+                    * 전문적인 답변을 원하시면 '답변자선택'에서 '수의사<img src="/img/tag/vetScope.png" alt="수의사태그" width="20">'를
                     선택해주세요.
                 </small>
             </div>
