--- a/src/main/resources/static/css/include/header.css
+++ b/src/main/resources/static/css/include/header.css
@@ -1,7 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-}
-
 header {
     border-bottom: 1px solid #ccc;
     padding-bottom: 10px;
@@ -11,18 +7,10 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 20px 20px;
-    background-color: #f8f9fa;
-    margin-bottom: 40px;
+    padding: 30px 20px 0 20px;
+    background-color: #fff;
+    margin-bottom: 0;
 }
-
-.header-top-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
 
 .search-container {
     width: 100%;
