--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -4857,7 +4857,7 @@ textarea.form-control-lg {
     --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
     --bs-accordion-body-padding-x: 1.25rem;
     --bs-accordion-body-padding-y: 1rem;
-    --bs-accordion-active-color: #0c63e4;
+    --bs-accordion-active-color: #000;
     --bs-accordion-active-bg: #e7f1ff;
 }
 
@@ -12431,78 +12431,6 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
     body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
         margin-left: -15rem;
     }
-}
-
-
-/*  */
-
-body {
-    font-family: Arial, sans-serif;
-}
-
-header {
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 10px;
-}
-
-.header-top {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 20px;
-    background-color: #f8f9fa;
-    margin-bottom: 40px;
-}
-
-.header-top-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
-.search-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin: 10px 0 40px;
-}
-
-.log {
-    font-weight: bold;
-}
-
-.auth {
-    font-size: 0.9em;
-}
-
-.auth a {
-    margin-left: 10px;
-    text-decoration: none;
-    color: #333;
-}
-
-.search-container {
-    text-align: center;
-    margin: 20px 0;
-}
-
-.search-container input[type="text"] {
-    width: 50%;
-    padding: 5px;
-    font-size: 1em;
-}
-
-nav {
-    text-align: center;
-    margin-top: 10px;
-}
-
-nav a {
-    margin: 0 10px;
-    text-decoration: none;
-    color: #333;
-    font-size: 1.1em;
 }
 
 /*썸머노트*/
