--- a/src/main/resources/templates/sample/allSearch.html
+++ b/src/main/resources/templates/sample/allSearch.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>Board General</title>
+    <title>통합검색</title>
     <!-- 부트스트랩 CSS 로드 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <!-- 부트스트랩 아이콘 사용 -->
