--- a/src/main/resources/templates/sample/home.html
+++ b/src/main/resources/templates/sample/home.html
@@ -9,11 +9,8 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/home.css}">
     <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
-    <title>Document</title>
+    <title>말랑발자국</title>
 </head>
-<style>
-
-</style>
 <body>
 <div th:include="include/header :: header"></div>
 
@@ -23,7 +20,7 @@
             <!--왼쪽-->
             <div>
                 <div class="p-4 mb-4 showOffBoard">
-                    <div class="d-flex justify-content-between px-2" style="background-color: #e5ffee;">
+                    <div class="d-flex justify-content-between px-2 showoffBgc">
                         <p class="boardTitle">자랑 게시판</p>
                         <a class="ms-3 align-content-end viewMore" href="/board/showoff">더 보기</a>
                     </div>
@@ -32,7 +29,7 @@
                         <tbody>
                         <tr>
                             <td class="mb-2 showListOne" th:each="dto:${showOffList}">
-                                <a th:href="@{'/board/read/'+${dto.postNo}}">
+                                <a th:href="@{'/board/read/'+${dto.postNo}}" class="d-flex flex-column justify-content-between">
                                     <span th:if="${!dto.imgBoards.isEmpty()}" th:each="imgDto:${dto.imgBoards}">
                                     <img th:src="${imgDto.thumbnailPath}" class="boardImg"
                                          alt="Image">
@@ -41,9 +38,9 @@
                                     <img src="/img/board/no_photo.png" class="boardImg"
                                          alt="Image">
                                     </span>
-                                    <div class="mt-3">
-                                        <p class="mb-0" th:text="${dto.postTitle}">제목</p>
-                                        <p class="mb-0" th:text="${dto.nickname}">글쓴이</p>
+                                    <div>
+                                        <p class="showoffTitle mb-0" th:text="${dto.postTitle}">제목</p>
+                                        <p class="showoffWriter mb-0" th:text="${dto.nickname}">글쓴이</p>
                                     </div>
                                 </a>
                             </td>
@@ -52,7 +49,7 @@
                     </table>
                 </div>
                 <div class="p-4 mb-4 generalBoard">
-                    <div class="d-flex justify-content-between px-2" style="background-color: #E8FFFF;">
+                    <div class="d-flex justify-content-between px-2 generalBgc">
                         <p class="boardTitle">자유 게시판</p>
                         <a class="ms-3 align-content-end viewMore" href="/board/general">더 보기</a>
                     </div>
@@ -119,7 +116,7 @@
                 </div> <!--general-->
 
                 <div class="p-4 tipBoard">
-                    <div class="d-flex justify-content-between px-2" style="background-color: #fffde8;">
+                    <div class="d-flex justify-content-between px-2 tipBgc">
                         <p class="boardTitle">정보 게시판</p>
                         <a class="ms-3 align-content-end viewMore" href="/board/tip">더 보기</a>
                     </div>
@@ -190,16 +187,16 @@
             <!--오른쪽-->
             <div>
                 <!--로그인 전-->
-                <div class="d-flex mb-4 ms-4 login" th:if="${username == null}">
+                <div class="d-flex mb-4 ms-4 loginB" th:if="${username == null}">
                     <div>
                         <form>
                             <div class="mt-3 mx-3 d-flex align-items-center">
                                 <div>
-                                    <div style="width: 220px">
+                                    <div class="loginId">
                                         <label for="username">아이디</label>
                                         <input type="text" name="username" id="username" class="form-control">
                                     </div>
-                                    <div style="width: 220px">
+                                    <div class="loginPw">
                                         <label for="password">비밀번호</label>
                                         <input type="password" name="password" id="password"
                                                class="form-control">
@@ -209,8 +206,7 @@
                                     <span>로그인</span>
                                 </button>
                             </div>
-                            <div class="d-flex justify-content-evenly align-items-center"
-                                 style="height: 65px;">
+                            <div class="d-flex justify-content-evenly align-items-center loginOpt">
                                 <div>
                                     <label>
                                         <input type="checkbox" name="autoLogin" id="autoLogin"
@@ -226,8 +222,7 @@
                             </div>
                         </form>
 
-                        <div class="d-flex justify-content-around align-items-center"
-                             style="height: 30px;">
+                        <div class="d-flex justify-content-around align-items-center etcOpt">
                             <a href="/user/join">회원가입</a>
                             <div class="d-flex justify-content-between">
                                 <a href="/user/findId">아이디찾기</a>
@@ -248,8 +243,8 @@
                     </div>
                 </div>
                 <!--로그인 후-->
-                <div class="p-4 mb-4 ms-4 login" th:if="${username != null}" style="background-color: #E8FFFF">
-                    <div class="d-flex flex-column justify-content-between px-3" style="background-color: white; height: 220px; border: 1px solid #d5d5d5; border-radius: 0.35rem">
+                <div class="p-4 mb-4 ms-4 loginA" th:if="${username != null}">
+                    <div class="d-flex flex-column justify-content-between px-3 homeMyInfo">
                         <!--닉네임-->
                         <div class="align-self-center mt-5">
                             <div class="d-flex flex-row">
@@ -265,21 +260,21 @@
                                 <!-- 레벨 이미지 표시 -->
                                 <span class="ms-2 mb-1">
                                     <img th:if="${userLevelInfo.level == 1}" th:src="@{/img/level/red.png}"
-                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                         alt="User Level Image" class="levelImg"/>
                                     <img th:if="${userLevelInfo.level == 2}" th:src="@{/img/level/orange.png}"
-                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                         alt="User Level Image" class="levelImg"/>
                                     <img th:if="${userLevelInfo.level == 3}" th:src="@{/img/level/yellow.png}"
-                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                         alt="User Level Image" class="levelImg"/>
                                     <img th:if="${userLevelInfo.level == 4}" th:src="@{/img/level/mint.png}"
-                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                         alt="User Level Image" class="levelImg"/>
                                     <img th:if="${userLevelInfo.level == 5}" th:src="@{/img/level/purple.png}"
-                                         alt="User Level Image" style="width: 50px; height: 50px;"/>
+                                         alt="User Level Image" class="levelImg"/>
                                 </span>
                                 <!--exp 바-->
                                 <div class="d-flex flex-column justify-content-center ms-4 me-3 mt-3">
                                     <div class="d-flex flex-column justify-content-center progress-container" data-bs-toggle="tooltip" data-bs-placement="top"
                                          title="자주 방문하거나 글, 댓글을 작성하면 경험치가 쌓입니다!">
-                                        <div class="progress" style="width: 240px">
+                                        <div class="progress">
                                             <!-- 진행 바 -->
                                             <div class="custom-progress-bar" role="progressbar"
                                                  th:style="'width: ' + ${userLevelInfo.percentage} + '%;'"
@@ -293,27 +288,27 @@
                                 </div>
                             </div>
                             <div class="d-flex flex-row justify-content-between me-5">
-                                <span class="ms-1" style="font-size: 18px">
-                                    레벨
+                                <span class="ms-1 levelExp">
+                                    등급
                                 </span>
-                                <span class="me-5" style="font-size: 18px">
+                                <span class="me-5 levelExp">
                                     경험치
                                 </span>
                             </div>
                         </div>
                     </div>
                     <!--활동/정보 수정-->
-                    <div class="d-flex flex-row justify-content-between" style="margin-top: 20px">
+                    <div class="d-flex flex-row justify-content-between myActInfo">
                         <!--활동-->
-                        <div style="background-color: white; width: 165px; height: 60px; margin-right: 20px; border: 1px solid #d5d5d5; border-radius: 0.35rem">
-                            <div class="d-flex justify-content-center" style="margin-top: 16px;">
-                                <a th:href="@{'/my/userActivity/' + ${username} + '/posts'}" style="color: #22b3fd;">내 활동</a>
+                        <div class="myActivity">
+                            <div class="d-flex justify-content-center">
+                                <a th:href="@{'/my/userActivity/' + ${username} + '/posts'}">내 활동</a>
                             </div>
                         </div>
                         <!--정보 수정-->
-                        <div style="background-color: white; width: 165px; height: 60px; border: 1px solid #d5d5d5; border-radius: 0.35rem">
-                            <div class="d-flex justify-content-center" style="margin-top: 16px">
-                                <a th:href="@{'/my/user-modify?userId=' + ${username}}" style="color: #22b3fd;">내 정보 수정</a>
+                        <div class="modMyInfo">
+                            <div class="d-flex justify-content-center">
+                                <a th:href="@{'/my/user-modify?userId=' + ${username}}">내 정보 수정</a>
                             </div>
                         </div>
                     </div>
@@ -321,7 +316,7 @@
 
                 <div class="ms-4 mb-4 currentHotBoard">
                     <div class="p-4">
-                        <p class="boardTitle px-2" style="background-color: #ffe8eb;">실시간 인기 게시글</p>
+                        <p class="boardTitle px-2 bestPost">실시간 인기 게시글</p>
                         <hr class="boardHr">
                         <div class="board">
                             <table class="table read">
@@ -397,7 +392,7 @@
 
                 <div class="ms-4 mb-4 qnaBoard">
                     <div class="p-4">
-                        <div class="d-flex justify-content-between px-2" style="background-color: #f9e8ff;">
+                        <div class="d-flex justify-content-between px-2 qnaBgc">
                             <p class="boardTitle">QnA 게시판</p>
                             <a class="ms-3 align-content-end viewMore" href="/board/qna">더 보기</a>
                         </div>
